[package]
name = "rc-new-cyclic-fallible"
version = "1.0.0"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@multiversx.com>",
    "MultiversX <contact@multiversx.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/rc-new-cyclic-fallible"
documentation = "https://github.com/multiversx/rc-new-cyclic-fallible/blob/main/README.md"
description = "Fallible variant of Rc::new_cyclic"
